# agent-native

./: .gitignore  .mcp.json  .prettierignore  AGENTS.md  DEVELOPMENT.md  NEXT-STEPS.md  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.agents/skills/: ui-plan  visual-plan  visual-questions  visualize-plan
.agents/skills/authentication/: SKILL.md
.agents/skills/babysit-pr/: SKILL.md
.agents/skills/external-agents/: SKILL.md
.agents/skills/harness-agents/: SKILL.md
.agents/skills/observability/: SKILL.md
.agents/skills/ship/: SKILL.md
.agents/skills/visual-plan/: SKILL.md  agent-native-skill.json
.agents/skills/visual-recap/: SKILL.md  agent-native-skill.json
.changeset/: agent-sidebar-animations.md  agent-team-metadata.md  assets-picker-loading-skeleton.md  assets-sidebar-image-model-menu.md  assistant-chat-empty-state-addon.md  bg-worker-awaited-milestones.md  block-edit-surface-none.md  block-registry-foundation.md  block-registry-tabs.md  chat-startup-retry.md  clean-content-share-invites.md  clean-skills-pack.md  coerce-gateway-stringified-tool-args.md  collab-reconcile-idempotent-safe.md  collapsible-left-sidebars.md  compact-live-cursors.md  composer-button-ordering-actionbutton.md  composer-image-model-menu.md  content-cloudflare-node-stubs.md  contracts-template-registry.md  create-start-shape-prompt.md  ddl-guard-generalize.md  design-chat-provider-preflight.md  design-connect-local-bridge.md  disable-onboarding-setup-panel.md  dispatch-catch-all-url-and-path-normalization.md  dispatch-catch-all-validate-url.md  dispatch-premint-mcp-embeds.md  dispatch-scheduling-localization.md  durable-bg-presend-cap.md  durable-bg-preserve-diag.md  durable-bg-worker-circuit-breaker.md  editor-code-block-highlight.md  embedded-extension-onready.md  fair-nitro-scaffolds.md  feedback-client-surface.md  fix-builder-api-host-fallback.md  fix-codex-cli-agent-engine.md  fix-plan-backdrop-filter-glitch.md  follow-up-og-agent-teams.md  (+33 more)
.claude/: launch.json
.github/workflows/: auto-publish.yml  cancel-stale-netlify-previews.yml  changeset-check.yml  ci.yml  clips-desktop-release.yml  neon-preview-branches.yml  pr-visual-recap-fork.yml  pr-visual-recap-reusable.yml  pr-visual-recap.yml
.hermes/: agent-native-status-handoff-2026-06-14.md
docs/: auth.md
plans/headless-mode/: plan.mdx
scripts/: build-branding-assets.mjs  changeset-publish-sequential.ts  check-changeset.mjs  dev-lazy.ts  guard-db-tool-scoping.mjs  guard-i18n-catalogs.ts  guard-no-env-mutation.mjs  guard-public-packages.ts  guard-template-list.mjs  i18n-catalog-english-value-baseline.txt  i18n-raw-literal-baseline.txt  qa-cli-smoke.ts  qa-public-share-smoke.ts  qa-standalone-starter-dev-smoke.ts  qa-template-route-matrix.ts  sync-plan-marketplace.ts  sync-template-netlify-env.ts  sync-workspace-core-skills.ts
skills/contracts/: SKILL.md
skills/ui-plan/: SKILL.md
skills/visual-plans/: SKILL.md
skills/visual-questions/: SKILL.md
skills/visualize-plan/: SKILL.md
templates/analytics/: AGENTS.md  netlify.toml  vite.config.ts
templates/analytics/actions/: bigquery-table-info.ts  bigquery.ts  content-calendar.ts  dashboard-mutation-api.ts  data-source-status.ts  gcloud.ts  generate-strategic-accounts-roster.spec.ts  generate-strategic-accounts-roster.ts  gong-calls.spec.ts  gong-calls.ts  hubspot-deals.ts  hubspot-metrics.ts  hubspot-pipelines.ts  hubspot-records.ts  install-dashboard-template.ts  (+23 more)
templates/assets/: DEVELOPING.md  vite.config.ts
templates/brain/: DEVELOPING.md  vite.config.ts
templates/calendar/: AGENTS.md
templates/chat/: DEVELOPING.md
templates/clips/: .gitignore  AGENTS.md  netlify.toml  package.json  vite.config.ts
templates/clips/desktop/src-tauri/: Cargo.toml
templates/clips/desktop/src-tauri/icons/: png-to-bmp-ico.mjs
templates/clips/desktop/src-tauri/src/: accessibility.rs  lib.rs  native_screen.rs  native_speech.rs  system_audio.rs  whisper_speech.rs
templates/clips/desktop/src-tauri/src/clips/: mod.rs
templates/content/: AGENTS.md  README.md  package.json  vite.config.ts
templates/contracts/: .gitignore  AGENTS.md  DEVELOPING.md  _gitignore  agent-native.app-skill.json  components.json  learnings.defaults.md  netlify.toml  package.json  ssr-entry.ts  tsconfig.json  vite.config.ts
templates/design/: AGENTS.md  DESIGN.md  DEVELOPING.md  agent-native.app-skill.json  package.json
templates/dispatch/: DEVELOPING.md
templates/forms/: AGENTS.md  vite.config.ts
templates/mail/: AGENTS.md  package.json
templates/plan/: AGENTS.md  DEVELOPING.md  README.md  agent-native.app-skill.json  package.json  playwright.config.ts  vite.config.ts
templates/slides/: AGENTS.md  package.json  vite.config.ts
templates/starter/: .env.example  AGENTS.md  DEVELOPING.md
(+899 files in other folders)
